<resources>

    <string name="app_name">Lope</string>
    <string name="back">Back</string>

    <string name="activity_main_gmail_title">Gmail</string>
    <string name="activity_main_right_title">Right</string>
    <string name="activity_main_left_title">Left</string>
    <string name="activity_main_up_title">Up</string>
    <string name="activity_main_down_title">Down</string>
    <string name="activity_main_ios_title">iOS</string>
    <string name="activity_main_scroll_down_title">Scroll \n down</string>
    <string name="activity_main_diagonal_title">Diagonal</string>
    <string name="activity_main_divide_title">Devide</string>
    <string name="activity_main_navigation">Navigation</string>
    <string name="activity_main_appearance">Appearance</string>
    <string name="activity_main_default">Default</string>

    <string name="activity_menu_animation_between_activities">Animation between activities</string>
    <string name="activity_menu_transition_between_activities">Transition between activities</string>
    <string name="activity_menu_animation_and_transition_between_activities">Animation and Transition</string>

    <string name="activity_menu_animation_transition_view_pager_button">View Pager \nTransition</string>
    <string name="activity_menu_animation_transition_recycler_view_button">Recycler View \nAnimation</string>

    <string name="activity_vertical_recycler_view">RecyclerView</string>

    <string name="blue_name">Blue</string>

    <string name="hello_blank_fragment">dd</string>
    <string name="title_activity_collapsing_toolbar">CollapsingToolbarActivity</string>

    <string name="activity_collapsing_toolbar_title">Collapsing</string>

</resources>
