<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.thedeveloperworldisyours.lope.BetweenActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/title" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/between_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/between_activity_toolbar"
        android:background="@drawable/toolbar_shadow" />

    <Button
        android:id="@+id/between_activity_appearance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/background_button"
        android:onClick="goToAppearance"
        android:text="@string/activity_main_appearance"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/between_activity_gmail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/between_activity_left"
        android:layout_alignTop="@+id/between_activity_down_button"
        android:layout_below="@+id/between_activity_left"
        android:background="@drawable/background_button"
        android:onClick="goToGmail"
        android:text="@string/activity_main_gmail_title"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/between_activity_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/between_activity_appearance_button"
        android:background="@drawable/background_button"
        android:onClick="goToRight"
        android:text="@string/activity_main_right_title"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/between_activity_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/between_activity_appearance_button"
        android:background="@drawable/background_button"
        android:onClick="goToLeft"
        android:text="@string/activity_main_left_title"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/between_activity_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/between_activity_appearance_button"
        android:layout_centerInParent="true"
        android:background="@drawable/background_button"
        android:onClick="goToUp"
        android:text="@string/activity_main_up_title"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/between_activity_down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/between_activity_appearance_button"
        android:layout_centerInParent="true"
        android:background="@drawable/background_button"
        android:onClick="goToDown"
        android:text="@string/activity_main_down_title"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/between_activity_scroll_down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/between_activity_down_button"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:onClick="goToScrollDown"
        android:text="@string/activity_main_scroll_down_title"
        android:textAlignment="gravity"
        android:textColor="@color/colorTextButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/between_activity_scroll_down_button"
        android:layout_alignRight="@+id/between_activity_diagonal"
        android:background="@drawable/background_button"
        android:onClick="goToiOS"
        android:text="@string/activity_main_ios_title"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/between_activity_diagonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/between_activity_right"
        android:layout_alignBottom="@+id/between_activity_down_button"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/between_activity_appearance_button"
        android:background="@drawable/background_button"
        android:onClick="goToDiagonal"
        android:text="@string/activity_main_diagonal_title"
        android:textColor="@color/colorTextButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/between_activity_right"
        android:layout_alignBottom="@+id/between_activity_up"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/between_activity_appearance_button"
        android:background="@drawable/background_button"
        android:onClick="goToDivide"
        android:text="@string/activity_main_divide_title"
        android:textColor="@color/colorTextButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/between_activity_appearance_button"
        android:layout_toLeftOf="@+id/between_activity_appearance_button"
        android:background="@drawable/background_button"
        android:onClick="goToNavigation"
        android:text="@string/activity_main_navigation"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/between_activity_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/between_activity_gmail_button"
        android:layout_alignTop="@+id/between_activity_scroll_down_button"
        android:background="@drawable/background_button"
        android:onClick="goToDefault"
        android:text="@string/activity_main_default"
        android:textColor="@color/colorTextButton" />

</RelativeLayout>
