<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.thedeveloperworldisyours.lope.MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/title" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/menu_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/menu_activity_toolbar"
        android:background="@drawable/toolbar_shadow" />

    <Button
        android:id="@+id/menu_activity_animation_between_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/background_button"
        android:onClick="goToTransition"
        android:padding="@dimen/padding_view"
        android:text="@string/activity_menu_animation_between_activities"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/menu_activity_transition_between_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_view"
        android:layout_below="@+id/menu_activity_animation_between_activities"
        android:background="@drawable/background_button"
        android:onClick="goToTransitions"
        android:padding="@dimen/padding_view"
        android:text="@string/activity_menu_transition_between_activities"
        android:textColor="@color/colorTextButton" />

    <Button
        android:id="@+id/menu_activity_animation_and_transition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_view"
        android:layout_below="@+id/menu_activity_transition_between_activities"
        android:background="@drawable/background_button"
        android:onClick="goToAnimationAndTransitions"
        android:padding="@dimen/padding_view"
        android:text="@string/activity_menu_animation_and_transition_between_activities"
        android:textColor="@color/colorTextButton" />

</RelativeLayout>
